--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,15 @@
-body {
+html,body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
   overflow-x: hidden;
   overflow-y: auto;
   -ms-overflow-style: none;
 }
-body:-webkit-scrollbar {
+html::-webkit-scrollbar,body:-webkit-scrollbar {
     width: 5px;
     height: 0;
 }
-body::-webkit-scrollbar-thumb{
+html::-webkit-scrollbar-thumb,body::-webkit-scrollbar-thumb{
     background-color: #747879;
     border-radius: 3px;
 }
